vue components for lazyIframes; more health checks for docker; more slides

--- a/mainService/src/main/resources/templates/index.html
+++ b/mainService/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
         }
 
         img {
-           width: 300px; /* Smaller image to save space */
+           width: 150px;
         }
 
         .iframe-container {
