more presentation changes

--- a/opsEngine/src/main/resources/views/dockerLogs.html
+++ b/opsEngine/src/main/resources/views/dockerLogs.html
@@ -9,6 +9,7 @@
            color: #fff;
            margin: 0;
            padding: 0;
+           overflow: hidden;
         }
         #log-container {
            padding: 20px; /* Add some padding for better spacing */
